force.com/CALM/src/objects/DataPoint__c.object
<CustomObject>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>DataPoint</relationshipLabel>
        <relationshipName>DataPoint</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataSet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DataSet</label>
        <referenceTo>DataSet__c</referenceTo>
        <relationshipLabel>DataPoint</relationshipLabel>
        <relationshipName>DataPoint</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DataPoint</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DataPoint ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataPoint</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>